# lindenis-v536-package

allwinner/boot-play/: Makefile
allwinner/btmanager/: Makefile
allwinner/btmanager/demo/: Makefile  gatt_server_test.c
allwinner/btmanager/src/gatt_server/: bt_adv.c  gatt_impl.c  gatt_server.c  gatt_server_glue.c
allwinner/eyesee-minigui/: Makefile
allwinner/eyesee-mpp/V5SdvLindeni/: Makefile
allwinner/eyesee-mpp/awcdr/: Config.in  Makefile
allwinner/eyesee-mpp/framework/: Makefile
allwinner/eyesee-mpp/middleware/: Config.in  Makefile
allwinner/eyesee-mpp/system/public/: Config.in  Makefile
allwinner/libkey/src/: Makefile
allwinner/misc-upgrade/: aw_upgrade_normal.sh  aw_upgrade_process.sh  aw_upgrade_vendor_default.sh
allwinner/mtop/: Makefile
allwinner/mtop/src/: mtop.c
allwinner/ota-burnboot/: Makefile
allwinner/swupdate/: Config-defaults.in  Makefile  swupdate_autorun.init  swupdate_cmd.sh
allwinner/tina_multimedia/: Config.in  Makefile
allwinner/tina_multimedia/jpegdecode/: Makefile
allwinner/tina_multimedia/libcedarx/: Makefile.am  configure.ac
allwinner/tina_multimedia/libcedarx/libcore/: Makefile.am
allwinner/tina_multimedia/libcedarx/libcore/base/: SmartDnsService.c
allwinner/tina_multimedia/libcedarx/libcore/muxer/base/: CdxMuxer.c  Makefile.am
allwinner/tina_multimedia/libcedarx/libcore/parser/: Makefile.am
allwinner/tina_multimedia/libcedarx/libcore/parser/amr/: CdxAmrParser.c
allwinner/tina_multimedia/libcedarx/libcore/parser/ape/: CdxApeParser.c
allwinner/tina_multimedia/libcedarx/libcore/parser/base/: CdxParser.c  Makefile.am
allwinner/tina_multimedia/libcedarx/libcore/parser/hls/: CdxHlsParser.c  M3UParser.c  M3UParser.h
allwinner/tina_multimedia/libcedarx/libcore/parser/include/: CdxParser.h
allwinner/tina_multimedia/libcedarx/libcore/parser/mov/: CdxMovAtom.c  CdxMovParser.c  CdxMovParserImpl.c  CdxMovSample.c
allwinner/tina_multimedia/libcedarx/libcore/parser/ogg/: CdxOggParser.c
allwinner/tina_multimedia/libcedarx/libcore/parser/ts/: CdxTsParser.c  CdxTsParser.h  Makefile.am  MediaProbe.c
allwinner/tina_multimedia/libcedarx/libcore/parser/wav/: CdxWavParser.c
allwinner/tina_multimedia/libcedarx/libcore/playback/: Makefile.am  audioRenderComponent.c  player.c
allwinner/tina_multimedia/libcedarx/libcore/playback/include/: player.h
allwinner/tina_multimedia/libcedarx/libcore/stream/: Makefile.am
allwinner/tina_multimedia/libcedarx/libcore/stream/aes/: CdxAesStream.c  Makefile.am
allwinner/tina_multimedia/libcedarx/libcore/stream/base/: CdxStream.c  Makefile.am
allwinner/tina_multimedia/libcedarx/libcore/stream/customer/: Makefile.am
allwinner/tina_multimedia/libcedarx/libcore/stream/http/: CdxHttpStream.c
allwinner/tina_multimedia/libcedarx/libcore/stream/ssl/: CdxSSLStream.c  Makefile.am
allwinner/tina_multimedia/libcedarx/xplayer/: Makefile.am  cache.c  cache.h  demuxComponent.c  xplayer.c
allwinner/tina_multimedia/libcedarx/xplayer/include/: mediaInfo.h  xplayer.h
allwinner/tina_multimedia/tmetadataretriever/: Makefile
allwinner/tina_multimedia/tplayer/: Makefile  tplayer.c  tplayer.h
allwinner/tina_multimedia/tplayer/awsink/: tdeinterlace_ctrl.c  tlayer_ctrl.c
allwinner/tina_multimedia_demo/decodertest/: Makefile
allwinner/tina_multimedia_demo/encodertest/: Makefile
allwinner/tina_multimedia_demo/jpegdecodedemo/: Makefile
allwinner/tina_multimedia_demo/jpegdecodedemo/src/: Makefile
allwinner/tina_multimedia_demo/moduledemo/: Makefile
allwinner/tina_multimedia_demo/tmetadataretrieverdemo/: Makefile
allwinner/tina_multimedia_demo/tmetadataretrieverdemo/src/: Makefile
allwinner/tina_multimedia_demo/tplayerdemo/: G102_tplayerdemo.sh  MR100_tplayerdemo.sh  Makefile  R7s_tplayerdemo.sh  T7_tplayerdemo.sh  c200s_tplayerdemo.sh  c600_tplayerdemo.sh  r11_tplayerdemo.sh  r16_tplayerdemo.sh  r18_tplayerdemo.sh  r30_tplayerdemo.sh  r311_tplayerdemo.sh  r328_tplayerdemo.sh  r40_tplayerdemo.sh  r58_tplayerdemo.sh  r7_tplayerdemo.sh  v3_tplayerdemo.sh
allwinner/tina_multimedia_demo/tplayerdemo/src/: Makefile  tplayerdemo.c
allwinner/tina_multimedia_demo/trecorderdemo/: Makefile
allwinner/wifimanager/src/core/: wifimanager.c
allwinner/wifimanager/src/daemon/: wifid_ctrl.h
busybox-init-base-files/busybox-init-base-files_ramfs/: init_sunxi
busybox-init-base-files/files/: pseudo_init
cortana/cortana-sdk/: Makefile
kernel/gpu-km/: Makefile
libs/cairo/: Makefile
libs/cyassl/: Config.in  Makefile
libs/cyassl/patches/: 400-additional_compatibility.patch  700-fixup-rsa-sha-compile-error.patch
libs/gpu-um/: Makefile
libs/libconfig/: Makefile
libs/libglog/: Makefile
libs/opencv/: Makefile
libs/opencv/patches/: 0001-csi_camera.patch
libs/toolchain/: Makefile
minigui/libminigui-gpl/: Makefile  MiniGUI.cfg
minigui/libminigui-gpl/patches/: 0008-add-scroll-and-filling-event.patch
minigui/r11-board/src/: Makefile
minigui/r11-board/src/washing-machine/: include.h
minigui/smart-music-player/: Makefile
minigui/smart-music-player/res/config/: MiniGUI.cfg  MiniGUI_320x480.cfg
minigui/smart-music-player/src/: smart-music-player.init
multimedia/gst1-plugins-bad/: Makefile
ros/ros-3rdparty/angles/: Makefile
ros/ros-3rdparty/class_loader/: Makefile
ros/ros-3rdparty/dynamic_reconfigure/: Makefile
ros/ros-3rdparty/geometry/: Makefile
ros/ros-3rdparty/geometry2/: Makefile
ros/ros-3rdparty/image_common/: Makefile
ros/ros-3rdparty/image_pipeline/: Makefile
ros/ros-3rdparty/nodelet_core/: Makefile
ros/ros-3rdparty/pluginlib/: Makefile
ros/ros-3rdparty/vision_opencv/: Makefile
ros/ros-base/common_msgs/: Makefile
ros/ros-base/ros-kinetic-devel/: Makefile
ros/ros-base/ros_comm/: Makefile
ros/ros-base/std_msgs/: Makefile
security/cryptsetup/: Makefile
security/sepolicy-demo/src/: device.te  file_contexts
system/procd/: Makefile
utils/opengles_demo/: Makefile
utils/rftest/xr829/: btetf  etf
utils/uboot-envtools/: Makefile
utils/util-linux/: Makefile
wayland/glmark2/: Makefile
(+14 files in other folders)
